# 360mu

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  build.sh
.claude/: settings.local.json
android/: build_temp.bat  gradle.properties  gradlew  gradlew.bat  rebuild_native.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/x360mu/: MainActivity.kt  X360muApplication.kt
android/app/src/main/java/com/x360mu/core/: ControllerProfile.kt  ControllerProfileManager.kt  NativeEmulator.kt  VibrationManager.kt
android/app/src/main/java/com/x360mu/ui/: App.kt
android/app/src/main/java/com/x360mu/ui/screens/: GameScreen.kt  LibraryScreen.kt  LogScreen.kt  SettingsScreen.kt  TestRenderScreen.kt
android/app/src/main/java/com/x360mu/ui/theme/: Theme.kt  Type.kt
android/app/src/main/java/com/x360mu/util/: PathUtils.kt  PreferencesManager.kt  RomScanner.kt
android/app/src/main/res/drawable/: ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/gradle/: libs.versions.toml
docs/: BLACK_OPS_COMPATIBILITY.md  IMPLEMENTATION_PLAN.md  MULTI_THREADING_IMPLEMENTATION.md  NEXT_STEPS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  black_ops_debug_notes.md
docs/architecture/: JIT_COMPILER.md  THREADING_MODEL.md
docs/bugs/: JIT_FASTMEM_BUG.md  SIGSEGV_0x20000000.md
docs/issues/: SPIN_LOOP_WORKER_THREAD_ISSUE.md
docs/tasks/: BLOCKER_01_LZX_DECOMPRESSION.md  BLOCKER_02_TIME_BASE_REGISTER.md  BLOCKER_03_SHADER_LOOPS_PREDICATION.md  BLOCKER_04_ALERTABLE_WAITS.md  BLOCKER_INDEX.md  README.md  STREAM_A_HLE_INTEGRATION.md  STREAM_B_CPU_INSTRUCTIONS.md  STREAM_C_GPU_PIPELINE.md  STREAM_D_AUDIO_OUTPUT.md  STREAM_D_MULTI_THREADING_FIX.md  TASK_01_FILE_SYSTEM.md  TASK_02_VULKAN_BACKEND.md  TASK_03_SHADER_TRANSLATOR.md  TASK_04_COMMAND_PROCESSOR.md  TASK_05_JIT_CODEGEN.md  TASK_06_KERNEL_FILE_IO.md  TASK_07_KERNEL_THREADING.md  TASK_08_XMA_AUDIO.md  TASK_ANDROID_BUILD.md  TASK_AUDIO_XMA.md  TASK_CPU_INSTRUCTIONS.md  TASK_GPU_VULKAN.md  TASK_JIT_COMPILER.md  TASK_KERNEL_HLE.md  WORKER_THREAD_IMPLEMENTATION_PLAN.md
native/: CMakeLists.txt
native/include/x360mu/: byte_swap.h  emulator.h  feature_flags.h  types.h
native/src/apu/: android_audio.cpp  android_audio.h  apu.cpp  audio.h  xma_decoder.cpp  xma_decoder.h
native/src/apu/stub/: apu_stub.cpp
native/src/core/: crash_handler.cpp  crash_handler.h  emulator.cpp  log_buffer.cpp  log_buffer.h  save_state.cpp  save_state.h
native/src/cpu/jit/: arm64_emitter.cpp  block_cache.cpp  jit.h  jit_compiler.cpp
native/src/cpu/vmx128/: vmx.cpp  vmx.h
native/src/cpu/xenon/: cpu.cpp  cpu.h  decoder.cpp  interpreter.cpp  interpreter_extended.cpp  threading.cpp  threading.h
native/src/gpu/: buffer_pool.cpp  buffer_pool.h  default_shaders.cpp  default_shaders.h  descriptor_manager.cpp  descriptor_manager.h  gpu_debug.h  render_target.cpp  render_target.h  shader_cache.cpp  shader_cache.h  texture_cache.cpp  texture_cache.h
native/src/gpu/stub/: gpu_stub.cpp
native/src/gpu/vulkan/: memory_manager.cpp  memory_manager.h  swapchain.cpp  swapchain.h  vulkan_backend.cpp  vulkan_backend.h
native/src/gpu/xenos/: command_processor.cpp  command_processor.h  edram.cpp  edram.h  gpu.cpp  gpu.h  shader_translator.cpp  shader_translator.h  spirv_builder.cpp  texture.cpp  texture.h
native/src/input/: input_manager.cpp  input_manager.h
native/src/jni/: jni_bridge.cpp
native/src/kernel/: game_info.cpp  game_info.h  kernel.cpp  kernel.h  threading.cpp  threading.h  work_queue.cpp  work_queue.h  xevent.cpp  xevent.h  xex_crypto.cpp  xex_crypto.h  xex_loader.cpp  xex_loader.h  xkernel.cpp  xkernel.h  xobject.cpp  xobject.h  xthread.cpp  xthread.h
native/src/kernel/filesystem/: iso_device.cpp  iso_device.h  stfs_device.cpp  stfs_device.h  vfs.cpp  vfs.h
native/src/kernel/hle/: xam.cpp  xboxkrnl.cpp  xboxkrnl_extended.cpp  xboxkrnl_io.cpp  xboxkrnl_threading.cpp
native/src/memory/: memory.cpp  memory.h
native/tests/: test_main.cpp
native/tests/apu/: test_audio.cpp
native/tests/cpu/: test_decoder.cpp  test_interpreter.cpp  test_interpreter_extended.cpp  test_jit.cpp  test_vmx128.cpp
native/tests/gpu/: test_buffer_pool.cpp  test_command_processor.cpp  test_pipeline_cache.cpp  test_shader_translator.cpp  test_texture_formats.cpp  test_vulkan.cpp  test_vulkan_no_sdk  test_vulkan_no_sdk.cpp  test_vulkan_standalone  test_vulkan_standalone.cpp
native/tests/integration/: test_boot_sequence.cpp  test_dpc_integration.cpp  test_file_hle_integration.cpp  test_gpu_draw_integration.cpp  test_render_pipeline.cpp  test_syscall_integration.cpp  test_threading_integration.cpp  test_xex_integration.cpp
native/tests/kernel/: test_dpc_execution.cpp  test_file_io.cpp  test_filesystem.cpp  test_threading.cpp  test_xevent.cpp  test_xex_loader.cpp  test_xkernel.cpp  test_xobject.cpp  test_xthread.cpp
native/tests/memory/: test_address_mapping.cpp  test_memory.cpp  test_memory_extended.cpp
native/tools/: extract_xex.cpp  test_execute.cpp  test_iso.cpp  test_syscalls.cpp  test_xex_load.cpp  xex_test.cpp
